--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
-<body bgcolor="gray">
+<body bgcolor="white">
 <center>
-<h2><font color=blue>Hello from ADV-IT!</font></h2>
+<h2><font color=red>Hello from MIKE!</font></h2>
 Jenkins Lessons!<br>
 <font color=yellow>www.adv-it.net</font>
 
