--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body bgcolor="white">
 <center>
 <h2><font color=red>Hello from MIKE!</font></h2>
-Jenkins Lessons!<br>
+Jenkins Lessons with auto trigger GIT!<br>
 <font color=yellow>www.adv-it.net</font>
 
 </center>
